edit-admin-room

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "airbnb-clone",
+  "name": "c",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "firebase-tools": "^10.9.2",
     "mapbox-gl": "^2.8.2",
     "moment": "^2.29.3",
     "notistack": "^2.0.4",
@@ -63,5 +64,7 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.0.24"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js"
 }
